changes done for the translation description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Object Value Translator</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Translate JSON values while preserving structure using the MyMemory Translation API. Supports 80+ languages including Indian languages. Browser-based tool for developers and content creators.">
 </head>
 
 <body>
